[package]
name = "mtcnn"
version = "0.1.0"
edition = "2018"

[dependencies]
tensorflow = { git = "https://github.com/tensorflow/rust"}
image = "0.21.0"
imageproc = "0.18.0"
structopt = "0.2"
actix-web = "1.0.0-alpha.4"
futures = "0.1.25"
log = "0.4.1"
pretty_env_logger = "0.2.5"
serde = "1.0"
serde_derive = "1.0"